badge table scrollbar fix

--- a/client/src/components/Badge/index.css
+++ b/client/src/components/Badge/index.css
@@ -26,6 +26,7 @@
 .badge-table-wrapper {
     overflow: auto;
     height: 60%;
+    max-height: 500px;
     background-color: white;
 }
 
